--- a/test.css
+++ b/test.css
@@ -9,6 +9,7 @@ body{
     display:flex;
     margin-top: 30px;
     justify-content: center;
+    flex-wrap: wrap;
     
 }
 
@@ -20,6 +21,7 @@ body{
     margin: 10px;
     text-align: left;
     border-radius: 10px;
+    
     
 }
 
